--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,18 @@
 }
 
 .mosquito2{
-    
+    width: 70px;
+    height: 70px;
+}
+
+.mosquito3{
+    width: 90px;
+    height: 90px;
+}
+
+.ladoA{
+    transform: scaleX(1);
+}
+.ladoA{
+    transform: scaleX(-1);
 }
