--- a/css/style.css
+++ b/css/style.css
@@ -29,10 +29,12 @@ body{
 .painel{
     position: absolute;
     width: 190px;
+    left: 0px;
     padding: 10px;
     bottom: 0px;
     border-top: solid 1px #fff ;
-    opacity: 30%;
+    background-color: #fff;
+    opacity: 0.7;
 }
 
 .vidas{
